--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>MapsAutocomp</title>
   <base href="/">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCA30tSHRKzFhYtbcf5PlwbRR8n5Afu49g&libraries=places"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
